// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Apple if user likes Apple and Juice 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <div
    className="App-intro"
  >
    <Apple />
  </div>
</div>
`;

exports[`renders Orange if user likes Juice but not Apple 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <div
    className="App-intro"
  >
    <Orange />
  </div>
</div>
`;

exports[`renders Tea if user does not like Juice, even though they like Apple 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <div
    className="App-intro"
  >
    <Tea />
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <h1
        className="App-title"
      >
        Welcome to React
      </h1>
    </header>
    <div
      className="App-intro"
    >
      <Tea>
        <h2>
          Have Tea!
        </h2>
      </Tea>
    </div>
  </div>
</App>
`;
